--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lucide-react": "^0.451.0",
+    "mathjs": "^13.2.0",
     "next": "14.2.15",
     "react": "^18",
     "react-dom": "^18"
