--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gif.js": "^0.2.0",
+    "gif.js.optimized": "^1.0.1",
+    "gifshot": "^0.4.5",
+    "html2canvas": "^1.4.1",
     "lucide-react": "^0.451.0",
     "mathjs": "^13.2.0",
     "next": "14.2.15",
