--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "three-globe": "^2.33.0"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1"
   },
