--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "chart.js": "^4.4.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.11.10",
     "gif.js": "^0.2.0",
     "gif.js.optimized": "^1.0.1",
@@ -36,6 +37,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
