--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gif.js.optimized": "^1.0.1",
     "gifshot": "^0.4.5",
     "html2canvas": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.451.0",
     "mathjs": "^13.2.0",
     "matter-js": "^0.20.0",
