--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.4.8",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-navigation-menu": "^1.2.1",
@@ -36,6 +38,7 @@
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-avatar": "^5.0.3",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
