--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dom": "^18",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.3.0",
+    "react-p5": "^1.4.1",
     "recharts": "^2.13.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
